<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TextFieldsFrag">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectionEnterCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="10dp"
                app:boxBackgroundColor="@android:color/holo_blue_dark"
                app:startIconTint="@android:color/white"
                app:endIconTint="@android:color/holo_red_light"
                app:boxStrokeColor="@android:color/holo_green_light"
                android:hint="@string/labelCity"
                app:hintTextColor="@android:color/holo_blue_light"
                app:startIconDrawable="@drawable/ic_location"
                app:startIconContentDescription="@string/enterCity"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_help"
                app:endIconContentDescription="@string/help"
                app:boxStrokeWidthFocused="4dp"
                app:helperTextEnabled="true"
                app:helperText="@string/enterCity"
                app:helperTextTextColor="@android:color/holo_orange_dark"
                app:suffixText="@string/item1"
                app:counterEnabled="true"
                app:counterMaxLength="7"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/ic_location"
                    app:backgroundTint="@android:color/holo_blue_dark" />

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resultTextFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sectionEnterCity"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/resultTextFields"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
