<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Toggle">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <com.google.android.material.button.MaterialButtonToggleGroup
              android:id="@+id/toggleButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:singleSelection="true">

              <Button
                  android:id="@+id/button1"
                  style="?attr/materialButtonOutlinedStyle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:backgroundTint="@color/color_toggle_background"
                  android:text="@string/item1"
                  android:textColor="@color/black"
                  app:strokeColor="@color/black"
                  app:strokeWidth="1dp" />

              <Button
                  android:id="@+id/button2"
                  style="?attr/materialButtonOutlinedStyle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:backgroundTint="@color/color_toggle_background"
                  android:text="@string/item2"
                  android:textColor="@color/black"
                  app:strokeColor="@color/black"
                  app:strokeWidth="1dp" />

              <Button
                  android:id="@+id/button3"
                  style="?attr/materialButtonOutlinedStyle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:backgroundTint="@color/color_toggle_background"
                  android:text="@string/item3"
                  android:textColor="@color/black"
                  app:strokeColor="@color/black"
                  app:strokeWidth="1dp" />

          </com.google.android.material.button.MaterialButtonToggleGroup>
          <com.google.android.material.button.MaterialButtonToggleGroup
              android:id="@+id/toggleButtonTextIcon"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/toggleButton"
              app:layout_constraintLeft_toLeftOf="parent">
              <Button
                  android:id="@+id/button11"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:backgroundTint="@color/color_toggle_background"
                  android:textColor="@color/black"
                  app:strokeColor = "@color/black"
                  app:strokeWidth ="1dp"
                  app:iconTint = "@color/black"
                  android:text="@string/item1"
                  app:icon="@drawable/ic_range_slider"
                  style="?attr/materialButtonOutlinedStyle"/>
              <Button
                  android:id="@+id/button21"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:backgroundTint="@color/color_toggle_background"
                  android:textColor="@color/black"
                  app:strokeColor = "@color/black"
                  app:strokeWidth ="1dp"
                  app:iconTint = "@color/black"
                  android:text="@string/item2"
                  app:icon="@drawable/ic_star"
                  style="?attr/materialButtonOutlinedStyle"/>
              <Button
                  android:id="@+id/button35"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:backgroundTint="@color/color_toggle_background"
                  android:textColor="@color/black"
                  app:strokeColor = "@color/black"
                  app:strokeWidth ="1dp"
                  app:iconTint = "@color/black"
                  android:text="@string/item3"
                  app:icon="@drawable/ic_play"
                  style="?attr/materialButtonOutlinedStyle"/>
          </com.google.android.material.button.MaterialButtonToggleGroup>

          <com.google.android.material.button.MaterialButtonToggleGroup
              android:id="@+id/toggleUpButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/toggleButtonTextIcon">

              <Button
                  android:id="@+id/button4"
                  style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:backgroundTint="@color/color_toggle_background"
                  app:icon="@drawable/ic_range_slider"
                  app:iconTint="@color/black"
                  app:strokeColor="@color/black"
                  app:strokeWidth="1dp" />

              <Button
                  android:id="@+id/button5"
                  style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:backgroundTint="@color/color_toggle_background"
                  android:textColor="@color/black"
                  app:icon="@drawable/ic_star"
                  app:iconTint="@color/black"
                  app:strokeColor="@color/black"
                  app:strokeWidth="1dp" />

              <Button
                  android:id="@+id/button6"
                  style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:backgroundTint="@color/color_toggle_background"
                  android:textColor="@color/black"
                  app:icon="@drawable/ic_play"
                  app:iconTint="@color/black"
                  app:strokeColor="@color/black"
                  app:strokeWidth="1dp" />
          </com.google.android.material.button.MaterialButtonToggleGroup>


          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/result"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/white"
              app:layout_constraintBottom_toTopOf="@+id/toggleButtonTextIcon"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@+id/toggleButton"
              app:layout_constraintTop_toTopOf="parent" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
